# my_portfolio

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
resources/: blog_articles_meta.csv  projects_meta.csv
static/blog_articles/: 2023-12-10_Error-Calculus-101.md  2023-12-10_error-calculus-101.md  2023-12-11_3-things-every-data-scientist-should-know.md  2023-12-11_5-things-every-data-scientist-should-know.md  Dummy_Article.md  Dummy_Article_2.md
static/css/: style.css
static/js/: parallax.js  search.js
templates/: about_me.html  blog_article.html  blog_overview.html  common.html  examples.html  landing_page.html  navbar.html
templates/components/: chart.html  header.html  navbar.html  parallax_background.html
